[package]
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
name = "rust-monkey-ir"
version = "0.1.0"

[dependencies]
clap = "2.32.0"
lazy_static = "1.1.0"
libc = "0.2"
rustc-llvm-proxy = "0.1"

[dependencies.llvm-sys]
features = ["no-llvm-linking"]
version = "70"

[build-dependencies]
cc = "1.0.25"

